# zai-tts2api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
tts2api/: __init__.py
zai_tts/: __init__.py  client.py
