[project]
name = "zai-tts"
version = "0.1.0b1"
description = "ZAI/GLM TTS to OpenAI Speech API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "argparse>=1.4.0",
]

[project.urls]
Repository = "https://github.com/aahl/zai-tts2api"

[project.scripts]
zai-tts = "zai_tts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zai_tts"]
